--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap");
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -86,6 +88,7 @@ body {
 }
 
 body {
+  font-family: "Space Grotesk", sans-serif;
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
